# pylabolt

./: .gitignore  LICENSE  Makefile  README.md  README.rst  baseAlgorithm.py  boundary.py  boundaryConditions.py  collisionModels.py  collisionStreaming.py  createSim.py  element.py  equilibrium.py  equilibriumModels.py  fields.py  fluidLB.py  get_coeff.py  inputOutput.py  lattice.py  mesh.py  propagation.py  pyproject.toml  readthedocs.yaml  run.py  schemeLB.py  setup.cfg  simulation.py  streaming.py  write_data.py
LBpy/: LBpy.py
LBpy (without numba)/: baseAlgorithm.py  boundaryConditions.py  equilibriumModels.py  lattice.py  mesh.py  schemeLB.py  simulation.py
LBpy/base/: baseAlgorithm.py  boundary.py  boundaryConditions.py  createSim.py  fields.py  lattice.py  mesh.py  schemeLB.py
LBpy/parallel/: MPI_comm.py  MPI_decompose.py  MPI_reconstruct.py  parallelSetup.py
LBpy/solvers/: fluidLB.py
LBpy/utils/: inputOutput.py  vtkconvert.py
docs/: Acknowledgements.rst  LBpy.base.rst  LBpy.solvers.rst  LBpy.utils.rst  Overview.rst  Setup.rst  boundary_conditions.rst  conf.py  index.rst  installation.rst  modules.rst  requirements.in  requirements.txt
pylabolt/: __main__.py  pylabolt.py
pylabolt/backend/: domain.py
pylabolt/base/: baseAlgorithm.py  boundary.py  boundaryConditions.py  boundaryConditions_cuda.py  boundary_operator.py  collision_operator.py  compute_fields_operator.py  control.py  createSim.py  fields.py  forceSetup.py  force_operator.py  init_fields.py  lattice.py  mesh.py  obstacle.py  obstacleTypes.py  obstacle_operator.py  options.py  scalarBoundaryConditions.py  schemeLB.py  setRegionFields.py  state.py  streaming_operator.py  transport.py
pylabolt/parallel/: MPI_comm.py  MPI_decompose.py  MPI_operator.py  MPI_reconstruct.py  backend.py  cudaReduce.py  domain.py  parallelSetup.py
pylabolt/solvers/: fluidLB.py  phaseFieldLB.py
pylabolt/utils/: IO.py  helpers.py  inputOutput.py  io_operator.py  (+6 more)
tests/: pytest.ini
(+193 files in other folders)
