[metadata]
name = LBpy
version = 0.1.0
author = Malyadeep Bhattacharya, Mithun M Nair
author_email = malyadeep1999@gmail.com
url = https://github.com/Malyadeep/LBpy
description = A single phase lattice Boltzmann solver
long_description = file: README.rst
long_description_content_type = text/markdown
keywords = lattice Boltzmann
license = GNU GENERAL PUBLIC LICENSE 3.0
classifiers = 
    License :: OSI Approved :: GNU GPL 3.0
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy >= 1.23.5
    numba >= 0.56.4

[options.extras_require]
dev = 
    flake8==6.0.0

[options.package_data]
example = *.txt* = README.rst, docs/, tests/

[project.urls]
"Homepage" = https://github.com/Malyadeep/LBpy
"Bug Tracker" = https://github.com/Malyadeep/LBpy/issues
