[metadata]
name = pylabolt
version = 0.1.1-dev27
author = Malyadeep Bhattacharya, Mithun M Nair
author_email = malyadeep1999@gmail.com
url = https://github.com/Malyadeep/LBpy
description = A single phase 2D lattice Boltzmann solver
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = lattice Boltzmann
license = GNU GENERAL PUBLIC LICENSE 3.0
classifiers = 
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy >= 1.23.5
    numba >= 0.56.4
    mpi4py >= 3.1.4

[options.extras_require]
dev = 
    flake8==6.0.0
install_requires =
    vtk >= 9.2.6

[options.package_data]
example = README.rst, docs/, tests/

[options.entry_points]
console_scripts = 
    pylabolt = pylabolt.pylabolt:main

[project.urls]
"Homepage" = https://github.com/Malyadeep/LBpy
"Bug Tracker" = https://github.com/Malyadeep/LBpy/issues
